--- a/biostatistics.html
+++ b/biostatistics.html
@@ -143,11 +143,11 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on:: 2019-10-05</p>
 <hr/>
-<h5><a href='https://tfscareers.workable.com/j/13CE70BC84'>TFS - Jobs: Senior Biostatistician - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tfscareers.workable.com/j/13CE70BC84'>TFS - Jobs: Senior Biostatistician - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<h5><a href='https://tfscareers.workable.com/j/EE7AB7F098'>TFS - Jobs: Biostatistician, home or office based (m/w/d) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tfscareers.workable.com/j/EE7AB7F098'>TFS - Jobs: Biostatistician, home or office based (m/w/d) - Apply online</a></h5> 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -201,7 +201,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
-<h5><a href='http://www.csulb.edu/academic-affairs/faculty-affairs/assistant-professor-of-biological-anthropology-2578'>Assistant Professor of Biological Anthropology 2578 | California State University, Long Beach</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://www.csulb.edu/academic-affairs/faculty-affairs/assistant-professor-of-biological-anthropology-2578'>Assistant Professor of Biological Anthropology 2578 | California State University, Long Beach</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-09-23</p>
 <hr/>
@@ -331,7 +331,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://adaptimmunellc.applytojob.com/apply/kCytWwfh2i/Principal-Biostatistician'>Principal Biostatistician - Adaptimmune - Career Page</a></h5> 
+<h5><a href='http://adaptimmunellc.applytojob.com/apply/kCytWwfh2i/Principal-Biostatistician'>Principal Biostatistician - Adaptimmune - Career Page</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
@@ -379,7 +379,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">Budapest, Hungary</span></p>
 <p>Posted on:: 2019-08-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/oUrAafwP'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oUrAafwP'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-27</p>
 <hr/>
@@ -443,11 +443,11 @@ Review all of the job details and apply today!</p>
 <p>Jul 29, 2019 ... ... of methodology; Develop predictive capabilities for Alkahest's scientific areas 
 of focus, using the appropriate statistical and machine learning methodologies?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FivePrimeTherapeutics/743999692690623-director-biostatistics'>FivePrime Therapeutics Director, Biostatistics | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FivePrimeTherapeutics/743999692690623-director-biostatistics'>FivePrime Therapeutics Director, Biostatistics | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">South San Francisco, CA</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://stanford.referrals.selectminds.com/jobs/biostatistician-1-7648'>Biostatistician 1 - Stanford University Careers</a></h5> 
+<h5><a href='https://stanford.referrals.selectminds.com/jobs/biostatistician-1-7648'>Biostatistician 1 - Stanford University Careers</a></h5> 
 <p><span class="badge badge-light">Redwood City California, United States</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
@@ -484,7 +484,7 @@ States in a poll conducted by The Scientist magazine! Our Values: INTEGRITY?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/veristat/job/oGFDafwS'>Veristat Careers - Senior Biostatistician</a></h5> 
+<h5><a href='https://jobs.jobvite.com/veristat/job/oGFDafwS'>Veristat Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-01</p>
 <hr/>
@@ -496,7 +496,7 @@ States in a poll conducted by The Scientist magazine! Our Values: INTEGRITY?...<
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-07-31</p>
 <hr/>
-<h5><a href='https://bswhealth.referrals.selectminds.com/jobs/biostatistician-ii-32744'>Biostatistician II - Baylor Scott & White Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bswhealth.referrals.selectminds.com/jobs/biostatistician-ii-32744'>Biostatistician II - Baylor Scott & White Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-31</p>
 <hr/>
