--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/elizabethwarren/jobs/4499731002'>Job Application for Iowa Organizing Internship at Warren For President</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://theskepticalguy.com/2019/04/29/micro-internships-how-to-leverage-the-gig-economy-to-find-great-young-talent/?utm_content=102437164&utm_medium=social&utm_source=twitter&hss_channel=tw-3689773037'>Micro-Internships: How to Leverage the Gig Economy to Find Great Young Talent ? The Skeptical Guy</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
 <h5><a href='https://nomoko.join.com/jobs/470090-3d-artist-internship'>Job @ Nomoko (Z?rich): 3D Artist Internship | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -57,7 +65,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698487043-engineering-management-intern-2020'>Bosch Group Engineering Management Intern 2020 | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698487043-engineering-management-intern-2020'>Bosch Group Engineering Management Intern 2020 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -89,7 +97,7 @@
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bandwidth/jobs/1933014'>Job Application for Product Management Intern - R&D at Bandwidth</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bandwidth/jobs/1933014'>Job Application for Product Management Intern - R&D at Bandwidth</a></h5> 
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -113,11 +121,11 @@
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471653-seo-intern-fall-'>SmartRecruiters Inc SEO Intern (Fall) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471653-seo-intern-fall-'>SmartRecruiters Inc SEO Intern (Fall) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://careers-brookings.icims.com/jobs/2203/research-assistant%2c-cuse/job'>Jobs and Internships | Brookings Institution</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-brookings.icims.com/jobs/2203/research-assistant%2c-cuse/job'>Jobs and Internships | Brookings Institution</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -207,7 +215,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gusto/jobs/593558'>Job Application for In-House Legal Intern, Health Benefits at Gusto</a></h5> 
+<h5><a href='https://boards.greenhouse.io/gusto/jobs/593558'>Job Application for In-House Legal Intern, Health Benefits at Gusto</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -407,7 +415,7 @@
 <p><span class="badge badge-light">Reston, VA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FireEyeInc1/743999698427293-vulnerability-intelligence-analyst-internships-summer-2020'>FireEye, Inc. Vulnerability Intelligence Analyst Internships - Summer 2020 | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/FireEyeInc1/743999698427293-vulnerability-intelligence-analyst-internships-summer-2020'>FireEye, Inc. Vulnerability Intelligence Analyst Internships - Summer 2020 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Reston, VA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -449,16 +457,6 @@
 <hr/>
 <h5><a href='https://jobs.lever.co/golucid/fb8dfa7f-953d-430b-8ff5-76c85772bcb1'>Lucid - Sales Operations Internship (2020) - Lucidchart</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, Utah</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://thestudenthotel.recruitee.com/o/assistant-operations-intern-barcelona'>
-      Assistant Operations Intern - The Student Hotel
-    </a></h5> 
-<p><span class="badge badge-light">Barcelona, Spain</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/zynga/job/oJsmbfws'>Zynga Careers - Product Management Intern (Summer 2020)</a></h5> 
-<p><span class="badge badge-light">San Francisco, California  San Francisco Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
